--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/login.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/login.html
@@ -6,6 +6,9 @@
 
     <title>UniNet</title>
 
+    <!--<link rel="icon" th:href="@{/imagenes/isologo.png}" type="image/x-icon">-->
+    <link rel="icon" href="../../../resources/core/imagenes/isologo.png" type="image/x-icon">
+
     <link rel="stylesheet" th:href="@{/css/login.css}"/>
     <!--<link rel="stylesheet" href="/src/main/webapp/resources/core/css/login.css">-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
