--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>Registrarse</title>
+
+    <!--<link rel="icon" th:href="@{/imagenes/isologo.png}" type="image/x-icon">-->
+    <link rel="icon" href="../../../resources/core/imagenes/isologo.png" type="image/x-icon">
+
     <link rel="stylesheet" th:href="@{/css/registrarse.css}"/>
     <!--<link rel="stylesheet" href="../../../resources/core/css/registrarse.css">-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
