Sigo arreglando errores al unificar código.

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -49,7 +49,7 @@
         </div>
         <div class="estructura box_columnaUno">
             <a href=""><img th:src="@{/imagenes/grupos.png}"> Grupos</a>
-            <a href=""><img src=@{/imagenes/guardados.png}"> Elementos guardados</a>
+            <a href=""><img th:src="@{/imagenes/guardados.png}"> Elementos guardados</a>
             <!--<a href=""><img src="../../../resources/core/imagenes/grupos.png"> Grupos</a>
             <a href=""><img src="../../../resources/core/imagenes/guardados.png"> Elementos guardados</a>-->
         </div>
