--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/templates/nav.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/templates/nav.html
@@ -2,8 +2,8 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <body>
 <nav th:fragment="nav" class="navbar">
-    <!--<a href="#"><img class="isologo" th:src="@{/imagenes/isologo.png}"></a>-->
-    <a href="#"><img class="isologo" src="../../../resources/core/imagenes/isologo.png"></a>
+    <a href="#"><img class="isologo" th:src="@{/imagenes/isologo.png}"></a>
+    <!--<a href="#"><img class="isologo" src="../../../resources/core/imagenes/isologo.png"></a>-->
     <div>
         <a href="/spring/miPerfil">Mi Perfil</a>
         <a href="/spring/miPerfil">Notificaciones</a>
