--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/templates/head.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/templates/head.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<head xmlns:th="http://www.thymeleaf.org" th:fragment="head">
+<th:block xmlns:th="http://www.thymeleaf.org" th:fragment="head">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 
     <link rel="icon" th:href="@{/imagenes/isologo.png}" type="image/x-icon">
-</head>
+</th:block>
