Sigo arreglando errores al unificar código.

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/templates/head.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/templates/head.html
@@ -1,7 +1,7 @@
-<head th:fragment="head">
+<div th:fragment="links-comunes">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 
     <link rel="icon" th:href="@{/imagenes/isologo.png}" type="image/x-icon">
-</head>
+</div>
