--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Home</title>
 
-    <th:block th:replace="template/head :: head"></th:block>
+    <th:block th:include="template/head :: links-comunes"></th:block>
 
     <!--<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +24,7 @@
 </head>
 <body>
 <header>
-    <nav th:replace="templates/nav :: nav "></nav>
+    <nav th:replace="templates/nav :: nav"></nav>
     <!--<nav class="navbar"> nav antiguo
         <a href="#"><img class="isologo" th:src="@{/imagenes/isologo.png}"></a>
         <a href="#"><img class="isologo" src="../../../resources/core/imagenes/isologo.png"></a>
