--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
@@ -6,8 +6,8 @@
 
   <title>Registrarse</title>
 
-    <!--<link rel="icon" th:href="@{/imagenes/isologo.png}" type="image/x-icon">-->
-    <link rel="icon" href="../../../resources/core/imagenes/isologo.png" type="image/x-icon">
+    <link rel="icon" th:href="@{/imagenes/isologo.png}" type="image/x-icon">
+    <!--<link rel="icon" href="../../../resources/core/imagenes/isologo.png" type="image/x-icon">-->
 
     <link rel="stylesheet" th:href="@{/css/registrarse.css}"/>
     <!--<link rel="stylesheet" href="../../../resources/core/css/registrarse.css">-->
