Sigo unificando código css para no repetir.

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
@@ -9,8 +9,12 @@
     <link rel="icon" th:href="@{/imagenes/isologo.png}" type="image/x-icon">
     <!--<link rel="icon" href="../../../resources/core/imagenes/isologo.png" type="image/x-icon">-->
 
+    <link rel="stylesheet" th:href="@{/css/variables.css}"/>
+    <link rel="stylesheet" th:href="@{/css/base.css}"/>
     <link rel="stylesheet" th:href="@{/css/registrarse.css}"/>
-    <!--<link rel="stylesheet" href="../../../resources/core/css/registrarse.css">-->
+    <!--<link rel="stylesheet" href="/src/main/webapp/resources/core/css/variables.css">
+    <link rel="stylesheet" href="/src/main/webapp/resources/core/css/base.css">
+    <link rel="stylesheet" href="../../../resources/core/css/registrarse.css">-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
