--- a/tallerwebi-base/src/main/webapp/resources/core/css/base.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/base.css
@@ -27,6 +27,34 @@ input, textarea, select {
   padding: 0.6rem 0.75rem;
   width: 100%;
   font-family: var(--font-family);
+  outline: none;
+  transition: border-color 0.2s ease;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+ }
+input[type=number] {
+  -moz-appearance: textfield;
+}
+select{
+    padding: 0.3rem;
+    height: 2rem;
+    appearance: none;
+}
+select:focus {
+  outline: none;
+  border: 1px solid var(--verde);
+  box-shadow: 0 0 0.3rem var(--verde);
+}
+select option {
+  background-color: var(--background-input);
+  color: var(--texto);
+}
+select option:hover {
+  background-color: var(--verde);
+  color: #0F1317;
 }
 /* Clase reutilizable que ya usás: estructura */
 .estructura {
@@ -44,9 +72,16 @@ input, textarea, select {
   border-radius: var(--radius);
   padding: 0.6rem 1rem;
   cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.2s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 .btn:hover {
   opacity: 0.9;
+  background-color: #219653;
 }
     /*Header*/
 .isologo{
@@ -66,10 +101,12 @@ input, textarea, select {
 .navbar div a{
     font-size: large;
 }
- .separador {
+.separador {
    width: 100%;
    height: 1px;
    background-color: var(--verde);
    margin: 0.5rem auto;
- }
+}
+
+
 
