Sigo unificando código css para no repetir.

--- a/tallerwebi-base/src/main/webapp/resources/core/css/base.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/base.css
@@ -78,6 +78,7 @@ select option:hover {
   align-items: center;
   justify-content: center;
   width: 100%;
+  font-weight: 600;
 }
 .btn:hover {
   opacity: 0.9;
