--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
@@ -8,17 +8,29 @@
     <!--<link rel="icon" th:href="@{/imagenes/isologo.png}" type="image/x-icon">-->
     <link rel="icon" href="../../../resources/core/imagenes/isologo.png" type="image/x-icon">
 
-    <link rel="stylesheet" th:href="@{/css/perfil.css}"/>
-    <link rel="stylesheet" th:href="@{/css/home.css}"/>
-    <!--<link rel="stylesheet" href="../../../resources/core/css/perfil.css"/>
-    <link rel="stylesheet" href="../../../resources/core/css/home.css"/>-->
+    <!--<link rel="stylesheet" th:href="@{/css/variables.css}"/>
+    <link rel="stylesheet" th:href="@{/css/base.css}"/>
+    <link rel="stylesheet" th:href="@{/css/perfil.css}"/>-->
+    <link rel="stylesheet" href="../../../resources/core/css/variables.css"/>
+    <link rel="stylesheet" href="../../../resources/core/css/base.css"/>
+    <link rel="stylesheet" href="../../../resources/core/css/perfil.css"/>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
-    <nav th:replace="templates/nav :: nav"></nav>
+    <!--<nav th:replace="templates/nav :: nav"></nav>-->
+    <nav class="navbar">
+        <a href="#"><img class="isologo" src="../../../resources/core/imagenes/isologo.png"></a>
+        <div>
+            <a href="/spring/miPerfil">Mi Perfil</a>
+            <a href="/spring/miPerfil">Notificaciones</a>
+            <a href="/spring/miPerfil">Mensajes</a>
+            <a href="/spring/miPerfil">Cerrar sesión</a>
+        </div>
+    </nav>
 </header>
 <main class="contenedor_box_general">
     <aside class="estructura contenedor_usuario" >
