--- a/tallerwebi-base/src/main/webapp/resources/core/css/perfil.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/perfil.css
@@ -1,3 +1,5 @@
+@import url ('variables.css');
+
 .contenedor_box_general{
     display: grid;
     grid-template-columns: 0.5fr 3.5fr;
@@ -6,15 +8,7 @@
     width: 100%;
 }
 .contenedor_box_general h1{
-    color: #F5F5F5;
-}
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-input[type=number] {
-  -moz-appearance: textfield;
+    color: var(--text);
 }
 .contenedor_usuario{
     display: flex;
@@ -27,16 +21,8 @@ input[type=number] {
     gap: 1rem;
 }
 .btn{
-    background-color: #27AE60;
-    color: #F5F5F5;
-    font-size: 1rem;
-    font-weight: 600;
-    border: none;
-    border-radius: 0.4rem;
     width: 9rem;
     height: 2rem;
-    cursor: pointer;
-    transition: background-color 0.2s ease;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -54,49 +40,23 @@ form{
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    color: #E0E0E0;
+    color: var(--text-ter);
     margin-bottom: 2rem;
     width: 48%;
 }
 .box_campo input{
-      font-family: "Inter", sans-serif;
-      background-color: #616466;
-      border: 1px solid #616466;
-      border-radius: 0.4rem;
-      width: 100%;
       height: 2.5rem;
       padding: 0 0.8rem;
-      color: #BDBDBD;
       font-size: 15px;
-      outline: none;
-}
-.box_campo select{
-      width: 100%;
-      height: 2.1rem;
-      background-color: #616466;
-      color: #F5F5F5;
-      border: 1px solid #616466;
-      border-radius: 0.3rem;
-      padding: 0.3rem;
-      appearance: none;
-      cursor: pointer;
-}
-.box_campo input:focus {
-  border: 1px solid #27AE60;
 }
 
 .box_campo input::placeholder {
   color: #9E9E9E;
 }
-.box_campo select:focus {
-  outline: none;
-  border: 1px solid #27AE60;
-  box-shadow: 0 0 0.3rem #27AE60;
-}
 
 .box_campo option {
-  background-color: #404345;
-  color: #F5F5F5;
+  background-color: var(--background-contenedor);
+  color: var(--text);
 }
 .contenedor_campos_btn{
     display: flex;
