--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Perfil</title>
 
-    <!--<link rel="icon" th:href="@{/imagenes/isologo.png}" type="image/x-icon">-->
-    <link rel="icon" href="../../../resources/core/imagenes/isologo.png" type="image/x-icon">
+    <link rel="icon" th:href="@{/imagenes/isologo.png}" type="image/x-icon">
+    <!--<link rel="icon" href="../../../resources/core/imagenes/isologo.png" type="image/x-icon">-->
 
-    <!--<link rel="stylesheet" th:href="@{/css/variables.css}"/>
+    <link rel="stylesheet" th:href="@{/css/variables.css}"/>
     <link rel="stylesheet" th:href="@{/css/base.css}"/>
-    <link rel="stylesheet" th:href="@{/css/perfil.css}"/>-->
-    <link rel="stylesheet" href="../../../resources/core/css/variables.css"/>
+    <link rel="stylesheet" th:href="@{/css/perfil.css}"/>
+    <!--<link rel="stylesheet" href="../../../resources/core/css/variables.css"/>
     <link rel="stylesheet" href="../../../resources/core/css/base.css"/>
-    <link rel="stylesheet" href="../../../resources/core/css/perfil.css"/>
+    <link rel="stylesheet" href="../../../resources/core/css/perfil.css"/>-->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,8 +21,8 @@
 </head>
 <body>
 <header>
-    <!--<nav th:replace="templates/nav :: nav"></nav>-->
-    <nav class="navbar">
+    <nav th:replace="templates/nav :: nav"></nav>
+    <!--<nav class="navbar"> nav viejo
         <a href="#"><img class="isologo" src="../../../resources/core/imagenes/isologo.png"></a>
         <div>
             <a href="/spring/miPerfil">Mi Perfil</a>
@@ -30,7 +30,7 @@
             <a href="/spring/miPerfil">Mensajes</a>
             <a href="/spring/miPerfil">Cerrar sesión</a>
         </div>
-    </nav>
+    </nav>-->
 </header>
 <main class="contenedor_box_general">
     <aside class="estructura contenedor_usuario" >
