se maneja mg con fetch js asi no se recarga la pagina

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -89,6 +89,7 @@
     </aside>
 </main>
 <script type="module" th:src="@{/js/publicacionBtnFunciones.js}"></script>
+<script type="module" th:src="@{/js/publicacionesFetch.js}"></script>
 
 
 </body>
