--- a/tallerwebi-base/src/main/webapp/resources/core/css/home.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/home.css
@@ -158,11 +158,29 @@ a {
 
 /*agrego contendror ver comentarios separado de mg y comentar*/
 .contenedor_verComentarios {
-     display: flex;
-     justify-content: flex-end;
-     margin-top: 10px;
+    display: flex;
+    align-items: center; /* centra verticalmente */
+    margin-top: 10px;
+}
+/****like sin accion, muestra cantidad)******/
+.like-container img {
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
 
+.like-container {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+.like-container img {
+    width:25px;
+}
+/*****final like que muestra cantidad**/
+.ver-comentariosBtn {
+    margin-left: auto; /* empuja el botón al final */
+}
 .contenedor_comentarios {
       display: flex;
       flex-direction: column;
@@ -170,6 +188,8 @@ a {
       gap: 10px;
       margin-top: 15px;
 }
+
+
 
 .contenedor_comentarios .comentario {
 
