Agrego la funcionalidad de cambiar de tema claro/oscuro.

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -89,7 +89,6 @@
     </aside>
 </main>
 <script type="module" th:src="@{/js/publicacionBtnFunciones.js}"></script>
-
-
+<script type="module" th:src="@{js/tema.js}"></script>
 </body>
 </html>
