--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/login.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/login.html
@@ -6,8 +6,8 @@
 
     <title>UniNet</title>
 
-    <link rel="icon" th:href="@{/imagenes/isologo.png}" type="image/x-icon">
-    <!--<link rel="icon" href="../../../resources/core/imagenes/isologo.png" type="image/x-icon">-->
+    <!--<link rel="icon" th:href="@{/imagenes/isologo.png}" type="image/x-icon">-->
+    <link rel="icon" href="../../../resources/core/imagenes/isologo.png" type="image/x-icon">
 
     <link rel="stylesheet" th:href="@{/css/variables.css}"/>
     <link rel="stylesheet" th:href="@{/css/base.css}"/>
@@ -41,7 +41,7 @@
         <a class="btn" id="btn-register" href="nuevo-usuario">Registrarme</a>
     </div>
 </main>
-
+<script type="module" th:src="@{js/tema.js}"></script>
 <script type="module" th:src="@{js/login.js}"></script>
 </body>
 </html>
