Agrego un th que me faltó en nav.html.

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/templates/nav.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/templates/nav.html
@@ -5,7 +5,7 @@
     <a href="#"><img class="isologo" th:src="@{/imagenes/isologo.png}"></a>
     <!--<a href="#"><img class="isologo" src="../../../resources/core/imagenes/isologo.png"></a>-->
     <div>
-        <button id="btn-tema" class="boton-tema"><img class="isologo" src="@{/imagenes/modo-oscuro.png}"></button>
+        <button id="btn-tema" class="boton-tema"><img class="isologo" th:src="@{/imagenes/modo-oscuro.png}"></button>
         <a href="/spring/miPerfil">Mi Perfil</a>
         <a href="/spring/miPerfil">Notificaciones</a>
         <a href="/spring/miPerfil">Mensajes</a>
