--- a/tallerwebi-base/src/main/webapp/resources/core/css/variables.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/variables.css
@@ -18,7 +18,7 @@
 body.tema-claro{
   --verde: #27AE60;
   --verde-2: #1F5133;
-  --background: #EAFBF0;
+  --background: #F4F2EE;
   --background-contenedor: #ffffff;
   --background-input: #f4f7f5;
   --texto: #1E1E1E;
